# hybrid-naive-bayes

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test.ipynb
.github/workflows/: ci.yml
src/: __init__.py  distributions.py  nb.py  test.py
tests/: test_distributions.py  test_nb.py
