[project]
name = "hybrid-naive-bayes"
version = "0.1.0"
description = "A Hybrid Naive Bayes implementation in Python."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "requests>=2.32.4",
]

[project.optional-dependencies]
dev = ["ruff", "pyright", "pytest", "pytest-cov", "coverage[toml]", "pre-commit"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
extraPaths = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
